--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "chai": "^4.3.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.8"
+    "mocha": "^10.2.0",
+    "mongoose": "^6.3.8",
+    "sinon": "^15.2.0"
   },
   "devDependencies": {
+    "jest": "^29.6.2",
     "nodemon": "^2.0.16"
   }
 }
