--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "mocha": "^10.2.0",
     "mongoose": "^6.3.8",
+    "morgan": "^1.10.0",
     "sinon": "^15.2.0"
   },
   "devDependencies": {
