--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["books", "api"],
+  "keywords": [
+    "books",
+    "api"
+  ],
   "author": "Enock Omondi",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.0",
     "chai": "^4.3.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mocha": "^10.2.0",
     "mongoose": "^6.3.8",
     "morgan": "^1.10.0",
