--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 PORT=5050
 DATABASE_URI=mongodb+srv://<database-name>:<password>@cluster0.x3yzm.mongodb.net/books?retryWrites=true&w=majority
-JWT_SECRETE=books_api
-NODE_ENV=development
+JWT_SECRETE=<secreteKey>
+NODE_ENV=<environment>
